--- a/tool.org
+++ b/tool.org
@@ -618,6 +618,9 @@ Snow covers Emacs
 *** latex
 可以使用cdlatex完成输入latex的各种模块。使用快捷键C-c {可以输入equation等的
 模块。
+*** capture
+除了官方教程，这里有一篇不错的[[https://www.zmonster.me/2018/02/28/org-mode-capture.html#org1a3d856][应用笔记]]。
+
 ** python-mode
 - 进入交互python模式：进入某个buffer，M-x python-mode，然后C-c C-z即可进入交互模式，也可以在buffer里面写好程序，在C-c
   C-z直接运行buffer的代码；
