--- a/index.org
+++ b/index.org
@@ -18,7 +18,7 @@
 * [[./hardware.org][硬件]]
 总结硬件中的数字电路、模拟电路、射频、器件、芯片内核等。
 * [[./tool.org][工具]]
-总结工作中用到的工具，emacs、latex、软件工具等。
+总结工作中用到的工具，emacs、latex、git、软件工具等。
 * [[./signal.org][信号系统]]
 总结信号与系统的方方面面。
 * [[./os.org][操作系统]]
