--- a/sitemap.org
+++ b/sitemap.org
@@ -1,16 +1,16 @@
 #+TITLE: Sitemap
 
-- [[file:tool.org][工具]]
-- [[file:index.org][比克曼的知识管理]]
-- [[file:software.org][软件]]
-- [[file:security.org][安全]]
-- [[file:signal.org][信号与系统]]
-- [[file:protocol.org][协议]]
-- [[file:os.org][操作系统]]
-- [[file:math.org][数学]]
-- [[file:language.org][外语学习]]
-- [[file:hardware.org][硬件]]
-- [[file:encyclopedia.org][百科知识]]
-- [[file:decoration.org][装修日记]]
-- [[file:communication.org][通信]]
-- [[file:algorithm.org][算法]]
+- [[file:tool.org][鹿陇戮脽]]
+- [[file:index.org][卤脠驴脣脗眉碌脛脰陋脢露鹿脺脌铆]]
+- [[file:software.org][脠铆录镁]]
+- [[file:security.org][掳虏脠芦]]
+- [[file:signal.org][脨脜潞脜脫毛脧碌脥鲁]]
+- [[file:protocol.org][脨颅脪茅]]
+- [[file:os.org][虏脵脳梅脧碌脥鲁]]
+- [[file:math.org][脢媒脩搂]]
+- [[file:language.org][脥芒脫茂脩搂脧掳]]
+- [[file:hardware.org][脫虏录镁]]
+- [[file:encyclopedia.org][掳脵驴脝脰陋脢露]]
+- [[file:decoration.org][脳掳脨脼脠脮录脟]]
+- [[file:communication.org][脥篓脨脜]]
+- [[file:algorithm.org][脣茫路篓]]
