--- a/software.org
+++ b/software.org
@@ -158,6 +158,55 @@
         return B ;
     }
   #+end_src
+*** 字符串操作
+- 分割字符串：比如以任意几个字符串B作为A字符串的分割符号，A字符串可以
+  以B作为开头，结尾也可以有任意个B，中间也可以有任意个B。
+  #+BEGIN_SRC c -n 
+    /** 
+     ,* @brief 以demial分割string_org字符串，可以多次调用，分割完string_org
+     ,* 比较经典的是里面的map对demial的编码算法
+     ,* @param string_org 待分割字符串
+     ,* @param demial 分隔符
+     ,* @return NULL：没找到除demial的字符串，其他：找到的第一个字符串
+     ,*/
+    char *strtok(char *string_org, const char * demial)
+    {
+            static unsigned char* last;
+            unsigned char*str;
+            const unsigned char*ctrl = (const unsigned char*)demial;
+            unsigned char map[32];
+            int count;
+            memset(map, 0, sizeof(map));
+        //把demial的高5bit编码到map的index下标中，把demial的低3bit编码到
+        //map该下标的值中，下标和值中的每个1标识一个不同的demial;
+            do
+            {
+                    map[*ctrl >> 3] |= (1 << (*ctrl & 7));
+            } while (*ctrl++);
+            str = (string_org)?(unsigned char * )string_org:
+                last;
+            // 对str中每个字符取出来做map编码再比较，直到'\0'结束符
+            // 略去string_org以demial开头的字符串
+            while ((map[*str >> 3] & (1 << (*str & 7))) && *str)
+            {
+                    str++;
+            }
+            string_org = (char *)str;
+            for (; * str; str++)
+            {
+                    if (map[*str >> 3] & (1 << (*str & 7)))
+                    {
+                            ,*str++ = '\0';//找到1个demial就截取退出
+                            break;
+                    }
+            }
+            last = str;//保留剩下的未截取的字符串
+        //空字符串, 如最后1个参数后面添加一堆的空格"  test 1 2  "
+        return (string_org == (char *)str) ? NULL:
+            string_org;//截取了开头的demial到第2次demial之间的字符串
+    }
+  #+END_SRC
+
 *** 嵌入式
 - printf调试：可以如下步骤
   #+begin_src c
