--- a/sitemap.org
+++ b/sitemap.org
@@ -1,16 +1,16 @@
 #+TITLE: Sitemap
 
-- [[file:tool.org][¹¤¾ß]]
-- [[file:software.org][Èí¼þ]]
-- [[file:index.org][±È¿ËÂüµÄÖªÊ¶¹ÜÀí]]
+- [[file:tool.org][工具]]
+- [[file:software.org][软件]]
+- [[file:signal.org][信号与系统]]
 - [[file:security.org][°²È«]]
-- [[file:signal.org][ÐÅºÅÓëÏµÍ³]]
-- [[file:protocol.org][Ð­Òé]]
-- [[file:os.org][²Ù×÷ÏµÍ³]]
-- [[file:math.org][ÊýÑ§]]
-- [[file:language.org][ÍâÓïÑ§Ï°]]
-- [[file:hardware.org][Ó²¼þ]]
-- [[file:encyclopedia.org][°Ù¿ÆÖªÊ¶]]
-- [[file:decoration.org][×°ÐÞÈÕ¼Ç]]
-- [[file:communication.org][Í¨ÐÅ]]
-- [[file:algorithm.org][Ëã·¨]]
+- [[file:protocol.org][协议]]
+- [[file:os.org][操作系统]]
+- [[file:math.org][数学]]
+- [[file:language.org][外语学习]]
+- [[file:index.org][比克曼的知识管理]]
+- [[file:hardware.org][硬件]]
+- [[file:encyclopedia.org][百科知识]]
+- [[file:decoration.org][装修日记]]
+- [[file:communication.org][通信]]
+- [[file:algorithm.org][算法]]
